@@ -1,43 +1,81 @@
 package com.starbank.recommendation.service;
 
-import com.starbank.recommendation.model.RecommendationResponseDto;
-import com.starbank.recommendation.rule.RecommendationRuleSet;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.starbank.recommendation.model.*;
+import com.starbank.recommendation.model.enums.QueryType;
+import com.starbank.recommendation.repository.RuleRepository;
+import com.starbank.recommendation.rule.RuleCheck;
+import jakarta.annotation.PostConstruct;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * Сервис рекомендаций
- * Инжектирует List<RecommendationRuleSet> - список всех рекомендаций банка с условиями.
+ * Инжектирует List<RuleCheck> - все объекты по проверке правил рекомендаций
  */
 @Service
+@Slf4j
 public class RecommendationService {
-    private static final Logger logger = LoggerFactory.getLogger(RecommendationService.class);
-    private final List<RecommendationRuleSet> rules;
 
-    public RecommendationService(List<RecommendationRuleSet> rules) {
-        this.rules = rules;
+    private final RuleRepository ruleRepository;
+
+    @Autowired
+    private List<RuleCheck> ruleChecks;
+
+    private final Map<QueryType, RuleCheck> ruleCheckMap = new HashMap<>();
+
+    @PostConstruct
+    public void init() {
+        for (RuleCheck ruleCheck : ruleChecks) {
+            ruleCheckMap.put(ruleCheck.getQueryType(), ruleCheck);
+        }
     }
 
+    public RecommendationService(RuleRepository ruleRepository) {
+        this.ruleRepository = ruleRepository;
+    }
 
     /**
-     * Метод определяет какие рекомендации рекомендовать клиенту банка.
+     * Метод выдает рекомендации клиенту банка в зависимости от истории его операций в банке
      *
-     * @param userId - ID клиента банка.
-     * @return список рекомендованных рекомендаций.
+     * @param user_id - ID клиента банка.
+     * @return массив рекомендаций для этого пользователя
      */
-    @Cacheable(value = "recommendations", key = "#userId")
-    public RecommendationResponseDto getRecommendationsByIdUsers(UUID userId) {
-        logger.info("Вызван метод для получения рекомендаций с userId = ({})", userId);
-        return new RecommendationResponseDto(userId, rules.stream()
-                .map(rule -> rule.check(userId))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList());
+    @Cacheable(value = "recommendations", key = "#user_id")
+    public RecommendationResponseDto getRecommendationsByUserId(UUID user_id) {
+        List<RecommendationDto> recommendations = ruleRepository.findAll().parallelStream()
+                .filter(rule -> isValidRule(user_id, rule.getRule()))
+                .map(this::toRecommendationDto)
+                .collect(Collectors.toList());
+
+        return new RecommendationResponseDto(user_id, recommendations);
     }
+
+    private RecommendationDto toRecommendationDto(RuleEntity rule) {
+        return new RecommendationDto(rule.getProductId(), rule.getProductName(), rule.getProductText());
+    }
+
+    /**
+     * Метод проверяет одно правило по всем подправилам для заданного пользователя
+     *
+     * @param user_id  идентификатор пользователя
+     * @param rulesDto массив подправил для рекомендации
+     * @return boolean true-если пользователь удовлетворяет всем правилам рекомендации и false, если нет
+     *
+     */
+    private boolean isValidRule(UUID user_id, List<OneRuleDto> rulesDto) {
+        return rulesDto.parallelStream()
+                .allMatch(rule -> {
+                    RuleCheck ruleCheck = ruleCheckMap.get(QueryType.valueOf(rule.query().toUpperCase()));
+                    if (ruleCheck == null) {
+                        throw new IllegalArgumentException("Нет объекта класса проверки для типа запроса: " + rule.query());
+                    }
+                    return ruleCheck.check(user_id, rule);
+                });
+    }
+
 }
